--- a/src/styles/WatchProvider.module.scss
+++ b/src/styles/WatchProvider.module.scss
@@ -1,7 +1,20 @@
+.divProviders{
+    background-color: rgba($color: #000, $alpha: .5); 
+    padding: 1em;
+    overflow: hidden;
+    border-radius: 0 0 15px 15px ;     
+    transition: max-height 0.5s ease-in-out;
+    
+    h4{
+        padding-top: 2em;
+    }
+}
+
 .listProviders{
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap;    
     gap: 1em;
+    
 }
 
 .providers{
@@ -9,15 +22,40 @@
     flex-direction: column;    
     background-color: rgba($color: #000, $alpha: .5); 
     margin-top: .5em;
-    min-height: 20em;
+    min-width: 10em;
+    max-height: 10em;   
     padding: 1em;
-    border-radius: 15px;    
-    h3{
+    border-radius: 15px 15px 0 0; 
+
+    .flag{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        overflow: hidden;
+        transition: 200ms;
+        padding: 1em;
+
+        img{
+            width: 20%;
+            height: auto;
+            object-fit: cover;
+            cursor: pointer;
+            transition: 300ms;
+            scale: (1.0);
+
+            &:hover{
+                border: 4px solid #FFC312;
+                border-radius: 50%;
+                transform: scale(1.1);
+            }
+        }
+
+    }
+
+    h4{
         text-align: center;
         text-transform: uppercase;
         border-bottom: .1em solid #FFC312;        
-    }
-    h4{
-        padding-top: 2em;
-    }
+    }    
 }
