--- a/src/styles/Film.module.scss
+++ b/src/styles/Film.module.scss
@@ -13,10 +13,11 @@
     .filmInfo{
         display: flex;
         gap: 1em;
+        color:#ccc;
 
         .certification{
             display: flex;
-            border: 1px solid white;
+            border: 1px solid #ccc;
             min-width: 30px;
             justify-content: center;
             align-items: center;
@@ -52,21 +53,23 @@
             padding-top: 1em;
         }
 
-        .similar{
+        .providers{
             display: flex;   
             flex-direction: column;
             margin-top: 2em;
 
-            .similarTitle{
+            .providersTitle{                  
+                display: flex;
+                gap: 1em;
+                align-items: center;
                 padding-left: 1em;
-                h2{
-                    border-bottom: 1px solid #FFC312;
-                }
+                border-bottom: 1px solid #FFC312;                               
+                                
             }
 
-            .similarContent{
-                display: grid;
-                grid-template-columns: repeat(4,1fr);
+            .providersContent{
+                display:flex;
+                flex-direction: column;
             }
         }
     }
@@ -89,36 +92,37 @@
     }
 }
 
-
-.providersContent{
-    display: flex;     
-    flex-direction: column;   
-    background-color: rgba($color: #000, $alpha: .7); 
+.similarContent{
+    display: flex;    
+    flex-direction: column;    
+    background-color: rgba($color: #000, $alpha: .8); 
     min-height: 50vh;       
     color: #fff;
     margin: 1em;
-    padding: 2em;
-    border-radius: 0.5em;   
-    
-    .providersTitle{
-        text-align: center;
-        border-bottom: .1em solid #5c5b58;
-        margin-bottom: 1em;
+    padding: 1em;
+    border-radius: 0.5em; 
+
+    .similarTitle{
+        color: #fff;
+        border-bottom: .3em solid #FFC312;
+        p{
+            span{
+                color: #FFC312;
+            }
+        }
     }
 
-    .providers{
+    .similar{
         display: grid;
-        grid-template-columns: repeat(4,1fr);
-        column-gap: 1em;
+        grid-template-columns: repeat(7,1fr);   
+        gap: 1em;
     }
 }
 
 @media (max-width:1200px){
-    .providersContent{                    
-        .providers{
-            display: grid;
-            grid-template-columns: repeat(3,1fr);
-            column-gap: 1em;
+    .similarContent{ 
+        .similar{
+            grid-template-columns: repeat(5,1fr);  
         }
     }
 }
@@ -180,25 +184,17 @@
                 }
             }
         }
-    
-        
     }
 
-    .providersContent{                    
-        .providers{
-            display: grid;
-            grid-template-columns: repeat(2,1fr);
-            column-gap: 1em;
+    .similarContent{ 
+        .similar{
+            grid-template-columns: repeat(3,1fr);  
         }
     }
+
+    
 }
 
 @media (max-width:500px){
-    .providersContent{                    
-        .providers{
-            display: grid;
-            grid-template-columns: repeat(1,1fr);
-            column-gap: 1em;
-        }
-    }
+    
 }
